[package]
name = "wdk_mutex_tests"
version = "0.0.4"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
test = false

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[dependencies]
wdk = "0.3.0"
wdk-alloc = "0.3.0"
wdk-panic = "0.3.0"
wdk-sys = "0.3.0"
wdk-mutex = {path = "../wdk_mutex/"}

[build-dependencies]
wdk-build = "0.3.0"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]